--- a/includes/wvhPluginStyle.css
+++ b/includes/wvhPluginStyle.css
@@ -40,11 +40,10 @@
   color: white;
   padding: 10px 20px;
   border: 0px;
-  float: right;
   margin-top: 20px; }
 
 #wvhPsychographicPlugin {
-  width: 300px;
+  width: 500px;
   margin: 20px auto;
   clear: both; }
 
@@ -56,23 +55,72 @@ label {
   line-height: normal; }
 
 #wvhPaywall label {
-  display: inline-block;
+  display: block;
   width: 140px;
   text-align: left;
-  padding-right: 20px; }
+  padding-right: 20px;
+  margin-top: .5em; }
 
 #wvhPaywall input {
-  width: 300px; }
+  width: 100%;
+  border-radius: 3px;
+  margin: .5em 0 1em;
+  background: #f6f6f6;
+  padding: 10px; }
 
 #wvhSurvey label {
-  display: block; }
+  display: block;
+  margin-bottom: .5em; }
 
 .wvhRadioWrapper {
-  display: block; }
+  margin: 1em;
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  font-weight: normal; }
+  .wvhRadioWrapper input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0; }
+  .wvhRadioWrapper .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: #eee;
+    border-radius: 50%; }
+    .wvhRadioWrapper .checkmark:after {
+      content: "";
+      position: absolute;
+      display: none;
+      top: 6px;
+      left: 6px;
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: #1a6092; }
+  .wvhRadioWrapper:hover input ~ .checkmark {
+    background-color: #ccc; }
+  .wvhRadioWrapper input:checked ~ .checkmark {
+    background-color: #62ade3; }
+  .wvhRadioWrapper input:checked ~ .checkmark:after {
+    display: block; }
 
 .wvhQuestion {
-  margin-bottom: 20px;
-  padding: 5px; }
+  border-bottom: 1px solid rgba(6, 24, 36, 0.11);
+  margin-bottom: 2em;
+  padding-bottom: 2em; }
+
+#question-12 {
+  border-bottom: 0px; }
 
 /* Phones */
 @media only screen and (min-width: 320px) and (max-width: 479px) {
