--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -49,7 +49,6 @@ $orange: #e09245;
     }
   }
 }
-
 .wvhFieldError
 {
     border: 2px solid red !important;
@@ -60,12 +59,11 @@ $orange: #e09245;
     color: white;
     padding: 10px 20px;
     border: 0px;
-    float: right;
     margin-top: 20px;
 }
 #wvhPsychographicPlugin
 {
-    width: 300px;
+    width: 500px;
     margin: 20px auto;
     clear: both;
 }
@@ -80,30 +78,93 @@ label
 }
 #wvhPaywall label
 {
-    display: inline-block;
+    display: block;
     width: 140px;
     text-align: left;
     padding-right: 20px;
+    margin-top: .5em;
 }
 #wvhPaywall input
 {
-    width: 300px;
+    width: 100%;
+    border-radius: 3px;
+    margin: .5em 0 1em;
+    background: rgb(246, 246, 246);
+    padding: 10px;
 }
 
 #wvhSurvey label
 {
     display: block;
+    margin-bottom: .5em;
 }
 
 .wvhRadioWrapper
 {
+    margin: 1em;
     display: block;
+    position: relative;
+    padding-left: 35px;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    font-weight: normal;
+
+    input {
+      position: absolute;
+      opacity: 0;
+      cursor: pointer;
+      height: 0;
+      width: 0;
+    }
+
+    .checkmark {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 20px;
+      width: 20px;
+      background-color: #eee;
+      border-radius: 50%;
+
+      &:after {
+        content: "";
+        position: absolute;
+        display: none;
+        top: 6px;
+        left: 6px;
+        width: 8px;
+        height: 8px;
+        border-radius: 50%;
+        background: $blue-dk;
+      }
+    }
+
+    &:hover input ~ .checkmark {
+      background-color: #ccc;
+    }
+
+    input:checked ~ .checkmark {
+      background-color: $blue;
+    }
+
+    input:checked ~ .checkmark:after {
+      display: block;
+    }
 }
+
 .wvhQuestion
 {
-    margin-bottom: 20px;
-    padding: 5px;
+    border-bottom: 1px solid  rgba(6, 24, 36, 0.11);
+    margin-bottom: 2em;
+    padding-bottom: 2em;
 }
+
+#question-12 {
+    border-bottom: 0px;
+  }
 
 
 /* Phones */
